# programowanie-rownolegle-laboratoria

c1/: sum.c  sum.h  try.h
c2/: zad.py
c2/c_lang/: CMakeLists.txt
c2/c_lang/include/static/: matrix.h  thread_matrix_multiplier.h  try.h
c2/c_lang/src/: app.c
c2/c_lang/src/static/: matrix.c  thread_matrix_multiplier.c
c3/: liczbypierwsze.c
c3/util/: count_speedup.sh  l_p_parallel.c  l_p_seq.c  liczbypierwsze.c
c4/: JobDistribiutor.py  QueueManager.py  QueueServer.py  README.md  Worker.py  main.py
c5/: integrate_msg.c  integrate_msg_wait.c  integrate_scatter.c
c6/: carthesian.c  gcd.c
c7/OpenMP/: main.c
l1/: dice.c  dice.h  main.c
